--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default-inicio
 ---
-<main id="background-colossus">
+<main class="col-lg-12 col-sm-12 col-xs-12 col-md-12" id="background-colossus">
    <div class="container">
        <div class="bloco-texto">
          <h1>
@@ -14,6 +14,15 @@ layout: default-inicio
        </div>
    </div>
 </main>
+
+<section class="col-lg-12 col-xs-12 colxs-12 col-md-12" id="conteudo">
+    <div class="container">
+        <h2>Projetado para Todos</h2>
+        <p>Colossus Framework Desenvolvido com intuíto de tornar o desenvolvimento mais rápido e dinamico. Desenvolvido pela equipe de Desenvolvimento da SMED</p>
+    </div>
+</section>
+<div class="clearfix"></div>
+
 
 
 
