add nosvas estruturas

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 ---
 layout: default-inicio
 ---
+
 <main class="col-lg-12 col-sm-12 col-xs-12 col-md-12" id="background-colossus">
    <div class="container">
        <div class="bloco-texto">
          <h1>
-          <span class="texto-colossus">Colossus Framework</span> 
+          <span class="texto-colossus">{{site.title}}</span> 
           <span class="texto-interface">User Interface</span>
          </h1>
          <div class="divider">
