add nova estrutura dia

--- a/index.html
+++ b/index.html
@@ -2,26 +2,17 @@
 layout: default-inicio
 ---
 
-<main class="col-lg-12 col-sm-12 col-xs-12 col-md-12" id="background-colossus">
+<main id="background-colossus">
    <div class="container">
-       <div class="bloco-texto">
-         <h1>
-          <span class="texto-colossus">{{site.title}}</span> 
-          <span class="texto-interface">User Interface</span>
-         </h1>
+        <span class="logo">C</span>
+         <h1><b>Colossus</b> Framework</h1>
+         <p class="texto-apresentacao">Projetado pata todos. Colossus Framework Desenvolvido com intuíto de tornar o desenvolvimento mais rápido e dinamico. Produzido pela equipe de Desenvolvimento da SMED</p>
          <div class="divider">
              <a href="#" class="btn btn-outline-transparent btn-lg">Download - V.1</a>
          </div>
-       </div>
    </div>
 </main>
 
-<section class="col-lg-12 col-xs-12 colxs-12 col-md-12" id="conteudo">
-    <div class="container">
-        <h2>Projetado para Todos</h2>
-        <p>Colossus Framework Desenvolvido com intuíto de tornar o desenvolvimento mais rápido e dinamico. Desenvolvido pela equipe de Desenvolvimento da SMED</p>
-    </div>
-</section>
 <div class="clearfix"></div>
 
 
