add novos arquivos e estruturas

--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 ---
-layout: default-inicio
+layout: default
 ---
 
 <main id="background-colossus">
    <div class="container">
-        <span class="logo">C</span>
-         <h1><b>Colossus</b> Framework</h1>
-         <p class="texto-apresentacao">Projetado pata todos. Colossus Framework Desenvolvido com intuíto de tornar o desenvolvimento mais rápido e dinamico. Produzido pela equipe de Desenvolvimento da SMED</p>
+        <img src="{{ site.baseurl }}/assets/img/ColossusFramework.svg" alt="Logomarca Colossus - SMED" width="355" height="107" class="img-fluid">
+         <p class="texto-apresentacao">Projetado pata todos. O <strong>Colossus Framework</strong> foi Desenvolvido com intuíto de tornar o desenvolvimento mais rápido e dinamico. Produzido pela equipe de Desenvolvimento da SMED.</p>
          <div class="divider">
-             <a href="#" class="btn btn-outline-transparent btn-lg">Download - V.1</a>
+             <a href="#" class="btn btn-outline-transparent btn-lg">Download Colossus</a>
          </div>
    </div>
 </main>
 
-<div class="clearfix"></div>
 
 
 
