--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 layout: default
 ---
 
-<main id="background-colossus">
+<main id="background-colossus" class="py-5">
    <div class="container">
         <img src="{{ site.baseurl }}/assets/img/ColossusFramework.svg" alt="Logomarca Colossus - SMED" width="355" height="107" class="img-fluid">
-         <p class="texto-apresentacao">Projetado pata todos. O <strong>Colossus Framework</strong> foi Desenvolvido com intuíto de tornar o desenvolvimento mais rápido e dinamico. Produzido pela equipe de Desenvolvimento da SMED.</p>
-         <div class="divider">
-             <a href="#" class="btn btn-outline-transparent btn-lg">Download Colossus</a>
-         </div>
+         <p class="mt-5 mx-auto">Projetado pata todos. O <strong>Colossus Framework</strong> foi Desenvolvido com intuíto de tornar o desenvolvimento mais rápido e dinamico. Produzido pela equipe de Desenvolvimento da SMED.</p>
+         <p class="mx-auto">
+            <a href="#" class="btn btn-outline-transparent">Download Colossus</a> <span>currently version 1.0</span> 
+         </p>
+         
    </div>
 </main>
 
