--- a/index.html
+++ b/index.html
@@ -2,14 +2,31 @@
 layout: default
 ---
 
-<main id="background-colossus" class="py-5">
-   <div class="container">
-        <img src="{{ site.baseurl }}/assets/img/ColossusFramework.svg" alt="Logomarca Colossus - SMED" width="355" height="107" class="img-fluid">
-         <p class="mt-5 mx-auto">Projetado pata todos. O <strong>Colossus Framework</strong> foi Desenvolvido com intuíto de tornar o desenvolvimento mais rápido e dinamico. Produzido pela equipe de Desenvolvimento da SMED.</p>
-         <p class="mx-auto">
-            <a href="#" class="btn btn-outline-transparent">Download Colossus</a> <span>currently version 1.0</span> 
-         </p>
-         
+<main id="background-colossus" class="p-5">
+   <div class="container p-180">
+       <div class="col-12 col-xl-12">
+             <div class="d-flex justify-content-center">
+                 <ul class="list-unstyled">
+                  <li class="media">
+                    <img class="d-flex mr-3" src="{{site.baseurl}}/assets/img/CF_Logo.svg"  alt="Logomarca colossus" width="100" height="100">
+                    <div class="media-body">
+                      <h5 class="mt-4 mb-1 link">FRAMEWORK</h5>
+                       <ul class="nav-footer">
+                           <li><a href="{{ site.baseurl }}/about">Sobre</a></li>
+                            <li><a href="{{ site.baseurl }}/examples">Examples</a></li>
+                       </ul>
+                    </div>
+                  </li>
+                </ul>
+            </div>
+       </div>
+       
+        <div id="home">
+             <p class="mt-5 mx-auto">Projetado para todos. O <strong>Colossus Framework</strong> foi Desenvolvido com intuíto de tornar o desenvolvimento mais rápido e dinamico. Produzido pela equipe de Desenvolvimento da SMED.</p> 
+             <div class="mx-auto">
+                <a href="#" class="btn btn-outline-transparent ml-5">Download Colossus</a> <span class="ml-2" style="color:#124375">currently version 1.0</span> 
+             </div>
+        </div>
    </div>
 </main>
 
